src/test/ui/parser/mistyped_reserved_token.rs
fn main() {
    let a = While true {
        break;
    };
}
